<resources>
    <string name="app_name">Bananas</string>
    <string name="welcome_to_banana_land">WELCOME TO BANANA LAND</string>
    <string name="hello_bananas">Hello Bananas</string>
    <string name="press_me">Press me</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="sign_Up">Sign up</string>
    <string name="save_user">Save User</string>
    <string name="log_in">Log In</string>
    <string name="enter_email_and_password_to_log_in">Enter Email and password to log in</string>
    <string name="congratulations">Congratulations! for joining our Banana Republic community. With us you will learn the value of bananas and how you can use them in your daily life</string>
</resources>