<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_background"
    tools:context=".SignUp">


    <ImageView
        android:layout_width="111dp"
        android:layout_height="87dp"
        android:src="@drawable/baseline_account_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="293dp"
        android:layout_height="102dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="492dp"
        android:autofillHints=""
        android:background="@drawable/edt_shape"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,TextFields" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/edt_shape"
        android:hint="@string/password"
        android:inputType=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406"
        tools:ignore="MissingConstraints,TextFields" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="196dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/black"
        android:text="@string/sign_Up"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556" />


</androidx.constraintlayout.widget.ConstraintLayout>