<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_background"
    tools:context=".LogIn">

    <TextView

        android:id="@+id/tv_login"
        android:layout_width="293dp"
        android:layout_height="102dp"
        android:text="@string/enter_email_and_password_to_log_in"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321" />

    <EditText

        android:id="@+id/et_loginuseremail"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/edt_shape"
        android:hint="@string/email"

        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478"
        tools:ignore="MissingConstraints,TextFields" />

    <EditText

        android:id="@+id/et_loginpassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/edt_shape"
        android:hint="@string/password"
        android:inputType=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.582"
        tools:ignore="MissingConstraints,TextFields" />

    <Button

        android:id="@+id/btn_login"
        android:layout_width="188dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/black"
        android:text="@string/log_in"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724"
        tools:ignore="DuplicateIds" />

    <ImageView

        android:id="@+id/iv_login"
        android:layout_width="151dp"
        android:layout_height="90dp"
        android:src="@drawable/baseline_add_reaction_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />
</androidx.constraintlayout.widget.ConstraintLayout>